<?xml version="1.0"?>
<package>
  <name>lar_tools</name>
  <version>0.0.0</version>
  <description>LAR Tools Package</description>

  <maintainer email="degregorio.daniele@gmail.com">daniele de gregorio</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>

  <export>
      <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib"/>
  </export>
</package>
